feat: 插件新增一些功能

--- a/HaowanSaveGame/HaowanSaveGame.uplugin
+++ b/HaowanSaveGame/HaowanSaveGame.uplugin
@@ -18,7 +18,7 @@
 		{
 			"Name": "HaowanSaveGame",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
