--- a/UIExtension/UIExtension.uplugin
+++ b/UIExtension/UIExtension.uplugin
@@ -19,7 +19,12 @@
 		{
 			"Name": "UIExtension",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
+		},
+		{
+			"Name": "UIExtensionEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
