--- a/EnhanceDataTableRowHandle/EnhanceDataTableRowHandle.uplugin
+++ b/EnhanceDataTableRowHandle/EnhanceDataTableRowHandle.uplugin
@@ -19,6 +19,11 @@
 			"Name": "EnhanceDataTableRowHandle",
 			"Type": "Runtime",
 			"LoadingPhase": "PreDefault"
+		},
+		{
+			"Name": "EnhanceDataTableRowHandleEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
